ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  tls:
  - hosts:
    - example.com
    secretName: my-tls-secret
  rules:
    - host: example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  number: 8080
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: helloword2
                port:
                  number: 8001
          - path: /hello3
            pathType: Prefix
            backend:
              service:
                name: helloword3
                port:
                  number: 8001
